<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingResultActivity"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equation"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/rootsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roots"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equation" />

    <TextView
        android:id="@+id/root1Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultHeading1"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/rootsHeading" />

    <TextView
        android:id="@+id/root2Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultHeading2"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/root1Heading" />

    <TextView
        android:id="@+id/x1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultValue1"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/root1Heading"
        app:layout_constraintTop_toBottomOf="@+id/rootsHeading" />

    <TextView
        android:id="@+id/x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultValue2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/root2Heading"
        app:layout_constraintTop_toBottomOf="@+id/x1" />
</android.support.constraint.ConstraintLayout>